Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43787

HotSpot of custom cursor does not work correct

    XMLWordPrintable

Details

    • 7c9497ad6ae9cb4b596bc76c70077577d97fe3cb

    Description

      If custom cursor is set the cursor's hot spot is not correctly Attached example reproduces this.

      Steps:
      Run the example and select cursor Arrow from menu
      move the mouse away from GraphicsView or bring it in to see it.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes